# TasteOfTheBlock

./: .gitignore  README.md  bot.py  db.py  db_cart.py  pyproject.toml  requirements.txt  restaurants.json
entities/: Dish.py  Restaurant.py  TasteOfTheBlock.py
service/: load_demo_restaurants.py  restaurant_srevice.py
shared/: shared_resource.py
utilities/: generate.py  picture.py
