[tool.poetry]
name = "my_hackathon_bot"
version = "0.1.0"
description = ""
authors = ["DevBoost1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
telebot = "^0.0.5"
ipython = "^8.26.0"
pymongo = "^4.8.0"
setuptools = "^72.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
